objects/CastIron_Log__c.object
<CustomObject>
    <description>Used for the management of the castiron errors with related activity details</description>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <description>CastIron faultInfo activityId</description>
        <label>Activity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <description>CastIron faultInfo activityName</description>
        <label>Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info_URL__c</fullName>
        <label>Additional Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CastIron_Job_ID__c</fullName>
        <label>CastIron Job ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Name__c</fullName>
        <label>Configuration Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Name__c</fullName>
        <description>CastIron faultInfo name</description>
        <label>Fault Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Time__c</fullName>
        <description>CastIron faultInfo faultTime</description>
        <label>Fault Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Start_Time__c</fullName>
        <label>Job Start Time</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Orchestration_Name__c</fullName>
        <label>Orchestration Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_ID__c</fullName>
        <description>Salesforce object ID related to this log entry</description>
        <label>Related Object ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Host_Name__c</fullName>
        <label>Router Host Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_User_ID__c</fullName>
        <label>Salesforce User ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>INFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARNING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRITICAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CastIron Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Orchestration_Name__c</columns>
        <columns>Activity_Name__c</columns>
        <columns>Fault_Name__c</columns>
        <columns>Fault_Time__c</columns>
        <columns>CastIron_Job_ID__c</columns>
        <columns>Related_Object_ID__c</columns>
        <columns>Salesforce_User_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Additional_Info_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Oracle_Operating_Unit_Errors</fullName>
        <columns>NAME</columns>
        <columns>Fault_Name__c</columns>
        <columns>Fault_Time__c</columns>
        <columns>Message__c</columns>
        <columns>Additional_Info_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fault_Name__c</field>
            <operation>equals</operation>
            <value>Missing Oracle Operating Unit</value>
        </filters>
        <label>Oracle Operating Unit Errors</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>CastIron Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CastIron Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>